Instance name in page titles across the SDI

--- a/src/main/resources/mapfishapp/i18n/index_en.properties
+++ b/src/main/resources/mapfishapp/i18n/index_en.properties
@@ -1,8 +1,8 @@
 ### Translation file
 
 # index.jsp
-title.editor=Editor - geOrchestra
-title.visual=Viewer - geOrchestra
+title.editor=Editor
+title.visual=Viewer
 loading=Loading...
 need.javascript=This application needs Javascript support. \
 Please activate it in your browser.
