--- a/src/main/resources/mapfishapp/i18n/index_es.properties
+++ b/src/main/resources/mapfishapp/i18n/index_es.properties
@@ -1,8 +1,8 @@
 ### Translation file
 
 # index.jsp
-title.editor=Editor - geOrchestra
-title.visual=Visualizador - geOrchestra
+title.editor=Editor
+title.visual=Visualizador
 loading=Cargando...
 need.javascript=Esta aplicación necesita el soporte de Javascript. \
 Por favor activelo en su navegador.
