--- a/src/main/resources/mapfishapp/i18n/index_fr.properties
+++ b/src/main/resources/mapfishapp/i18n/index_fr.properties
@@ -1,8 +1,8 @@
 ### Translation file
 
 # index.jsp
-title.editor=Editeur - geOrchestra
-title.visual=Visualiseur - geOrchestra
+title.editor=Editeur
+title.visual=Visualiseur
 loading=Chargement...
 need.javascript:Cette application nécessite le support de JavaScript par \
 votre navigateur. Merci de l'activer.
